--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "parcel build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier . --write",
-    "format:check": "prettier .",
+    "format:check": "prettier . --check",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
